add gpt responses

--- a/pw6/pw6.ipynb
+++ b/pw6/pw6.ipynb
@@ -1685,7 +1685,8 @@
     "\n",
     "TODO commenter les résultats et écrire conclusion\n",
     "\n",
-    "* eventuellement faire du stemming ou lematize \n",
+    "* eventuellement faire du stemming ou lematize -> GPT dit:\"Cela peut conduire à une meilleure représentation des données textuelles et améliorer la capacité du modèle à généraliser sur de nouvelles données.\" et encore -> \" Ces techniques de normalisation textuelle permettent de réduire les mots à leur forme de base ou racine, ce qui peut contribuer à réduire la dimensionnalité des données et améliorer la généralisation du modèle.\"\n",
+    "\n",
     "\n",
     "Les prochaines étapes pourraient inclure l'exploration d'autres modèles de classification, l'augmentation des données ou l'utilisation de techniques de pré-traitement de texte plus avancées pour améliorer encore les performances."
    ]
